code/human_written_tests/WebAssembly/processed_control_flow_validation/test_br_table_22.wast
(assert_invalid
  (module (func $unbound-label-default
    (block (br_table 1 2 (i32.const 1)))
  ))
  "unknown label"
)